--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Authentication with Node</title>
+	<title>Live Connect Authentication</title>
 	<% include partials/head %>
 </head>
-<body>
+
  <body>
+	 <div id="google_translate_element"></div><script type="text/javascript">
+function googleTranslateElementInit() {
+	new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'ar,de,el,en,es,fr,haw,hr,it,iw,la,pt,ru,sv,tr,zh-TW', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+}
+</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
  <script src="./js/back.js"></script>
 
 	<div class="container">
 		<div class="card text-center mt-5">
 			<div class="card-body">
-				<h1><span class="fa fa-block"></span>Node Authentication</h1>
+				<h1><span class="fa fa-block"></span>Live Connect</h1>
 				<p>Login or Register</p>
 				<a  id="loginn" href="/login" class="btn btn-light">
-					<span class="fa fa-user"></span> Local Login
+					<span class="fa fa-user"></span>  Login
 				</a>
 				<a href="/signup" class="btn btn-light">
-					<span class="fa fa-user"></span> Local Signup
+					<span class="fa fa-user"></span> Signup
 				</a>
 			</div>
 		</div>
