--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -6,6 +6,11 @@
     <% include partials/head %>
   </head>
   <body>
+    <div id="google_translate_element"></div><script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'ar,de,el,en,es,fr,haw,hr,it,iw,la,pt,ru,sv,tr,zh-TW', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+}
+</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <script src="./js/background.js"></script>
     <div class="container">
       <div class="col-sm-6 mx-auto">
@@ -24,8 +29,8 @@
             <!-- form -->
             <form action="/signup" method="post">
               <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" name="email" class="form-control">
+                <label for="username">User name</label>
+                <input type="username" name="username" class="form-control">
               </div>
               <div class="form-group">
                 <label for="password">Password</label>
